--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ h1 {
 
 .btn-primary,.reset{
     font-family: 'Bungee', cursive;
-    font-size: 34px;
+    font-size: 26px;
     font-weight: bolder;
     color: #F7E60C;
     -webkit-text-stroke: .5px black;
@@ -33,31 +33,100 @@ h1 {
 
 .container{
     font-family: 'Bungee', cursive;
+    font-size: 22px;
     color: #B80000;
-    margin-top: 50px;
-    margin-bottom: 100px;
+    -webkit-text-stroke: 1px #F7E60C;
     text-align: center;
+    margin-top: 25px;
+    margin-bottom: 280px;
     padding: 35px;
-	height: 100%;
+    height: 100%;
     width: 1000px;
     background-color: whitesmoke;
-    opacity: .80;
+    opacity: .95;
 }
 
-h2, #message, #endMessage{
+h2, #message, #endMessage, #correctAnswers, #incorrectAnswers, #unanswered{
 	font-family: 'Bungee', cursive;
-    font-size: 30px;
+    font-size: 26px;
     color: #F7E60C;
     -webkit-text-stroke: 1px black;
     text-shadow: -4px -3px 0px #B80000;
 }
 
-.userOption{
-    font-size: 24px;
-}
-
+.userOption, #resetBtn{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    background: none;
+    border: none;
+    color: #B80000;
+    -webkit-text-stroke: 1px #F7E60C;
+    font-size: 22px;
+    cursor: pointer;
+    margin: 10px 15px;
+    background: whitesmoke(0,0,0,0.09);
+  }
+  span{
+    display: inline-block;
+    padding: 25px 60px;
+  }
+  .userOption::before, .userOption::after, #resetBtn::before, #resetBtn::after{
+    content:"";
+    width: 0;
+    height: 2px;
+    position: absolute;
+    transition: all 0.2s linear;
+    background:#2739F5;
+  }
+  
+  span::before, span::after{
+    content:"";
+    width:2px;
+    height:0;
+    position: absolute;
+    transition: all 0.2s linear;
+    background: #2739F5;
+  }
+  .userOption:hover::before, .userOption:hover::after, #resetBtn:hover::before, #resetBtn:hover::after{
+    width: 100%;
+  }
+  .userOption:hover span::before, .userOption:hover span::after, #resetBtn:hover span::before, #resetBtn:hover span::after{
+    height: 100%;
+  }
+  /*----- button 1 -----*/
+  .userOption::before, .userOption::after, #resetBtn::before, #resetBtn::after{
+    transition-delay: 0.2s;
+  }
+  .userOption span::before, .userOption span::after, #resetBtn span::before, #resetBtn span::after{
+    transition-delay: 0s;
+  }
+  .userOption::before, #resetBtn::before{
+    right: 0;
+    top: 0;
+  }
+  .userOption::after, #resetBtn::after{
+    left: 0;
+    bottom: 0;
+  }
+  .userOption span::before, #resetBtn span::before{
+    left: 0;
+    top: 0;
+  }
+  .userOption span::after, resetBtn span::after{
+    right: 0;
+    bottom: 0;
+  }
+  .userOption:hover::before, .userOption:hover::after, #resetBtn:hover::before, #resetBtn:hover::after{
+    transition-delay: 0s;
+  }
+  .userOption:hover span::before, .userOption:hover span::after, #resetBtn:hover span::before, #resetBtn:hover span::after{
+    transition-delay: 0.2s;
+  }
+  
 
 #gifs{
-	margin: 30px;
+	margin: 15px;
 }
 
